overflow bugfix

--- a/style.css
+++ b/style.css
@@ -153,20 +153,25 @@ body {
     box-shadow: 0 1px 2px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .05);
 }
 
-.img-box {
+.inner {
     position: relative;
 }
 
+.img-box {
+    overflow: hidden;
+}
+
+
 .img-box i {
     position: absolute;
-    z-index: 1;
+    z-index: 200;
     top: 22px;
     right: 15px;
     font-size: 1.5rem;
     color: var(--white);
 }
 
-.img-box a {
+.inner a {
     position: absolute;
     width: 35px;
     height: 35px;
